# python_for_data_science_piscine

./: README.md
0_Starting/ex00/: Hello.py
0_Starting/ex01/: format_ft_time.py
0_Starting/ex02/: find_ft_type.py  tester.py
0_Starting/ex03/: NULL_not_found.py  tester.py
0_Starting/ex04/: whatis.py
0_Starting/ex05/: building.py
0_Starting/ex06/: filterstring.py  ft_filter.py
0_Starting/ex07/: sos.py
0_Starting/ex08/: Loading.py  tester.py
0_Starting/ex09/: README.md  ft_package.py  pyproject.toml  test.py
1_Array/: install.sh
1_Array/ex00/: give_bmi.py  tester.py
1_Array/ex01/: array2D.py  tester.py
1_Array/ex02/: load_image.py  tester.py
1_Array/ex03/: load_image.py  zoom.py
1_Array/ex04/: load_image.py  rotate.py  zoom.py
1_Array/ex05/: load_image.py  pimp_image.py  tester.py
2_DataTable/ex00/: load_csv.py  tester.py
2_DataTable/ex01/: aff_life.py
2_DataTable/ex02/: aff_pop.py
2_DataTable/ex03/: load_csv.py  projection_life.py
3_OOP/ex00/: S1E9.py  tester.py
3_OOP/ex01/: S1E7.py  S1E9.py  tester.py
3_OOP/ex02/: DiamondTrap.py  S1E7.py  tester.py
3_OOP/ex03/: ft_calculator.py  tester.py
3_OOP/ex04/: ft_calculator.py  tester.py
4_DOD/ex00/: statistics.py  tester.py
4_DOD/ex01/: in_out.py  tester.py
4_DOD/ex02/: callLimit.py  tester.py
4_DOD/ex03/: new_student.py  tester.py
